--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,10 +1,9 @@
-<style>
+<%layout("/layouts/boilerplate") %>
+    <style>
 .country{
     text-transform: capitalize;
 }
 </style>
-
-<%layout("/layouts/boilerplate") %>
 
     <div class="row">
         <div class="col-8 offset-3 mt-3">
@@ -36,7 +35,7 @@
                 </p>
                 <p class="card-text">Price :&nbsp; &#8377; <%= listing.price.toLocaleString("en-IN") %>
                 </p>
-                <p class="card-text counttry">Country : &nbsp;
+                <p class="card-text country">Country : &nbsp;
                     <%= listing.country %>
                 </p>
                 </p>
